Fixed styling quirk that resulted in audio being invisible.

--- a/client/styles/components/_medium.scss
+++ b/client/styles/components/_medium.scss
@@ -19,13 +19,15 @@
     max-width: 100%;
     max-height: calc(100vh - 128px);
 
-    width: auto;
-    height: auto;
-
     object-fit: contain;
   }
 
   img.medium {
     cursor: zoom-in;
+  }
+
+  img.medium, video.medium {
+    width: auto;
+    height: auto;
   }
 }
